# IdentifierAugNLP

./: README.md
Event Driven Code Examples/: Example1.java  Example1.xml  Example2.java  Example2.xml  Example3.java  Example3.xml  Example4.java  Example4.xml  Example5.java  Example5.xml  event_analysis.py  xml_parser.py
Expand/: Main.java
code2vec/: extracted_data.txt  test_data.txt
code2vec/JavaExtractor/: build.sh
code2vec/JavaExtractor/JPredict/: .project
ensemble_tagger/POSSE/Output/: attr50.input.pos
ensemble_tagger/POSSE/Scripts/: Tagger.pm  mainParser.pl
ensemble_tagger/POSSE/context/word-lists/: frequencies
ensemble_tagger/SWUM/: README.md
ensemble_tagger/SWUM/SWUM_POS/: .project  TODO  boiler_plate.txt  build.properties  plugin.xml  t
ensemble_tagger/SWUM/SWUM_POS/data/: README
ensemble_tagger/SWUM/SWUM_POS/data/overlap/: formalTypeOverlapHeads.txt
ensemble_tagger/SWUM/SWUM_POS/data/pos/: NP.txt  base_verb_samples.txt  base_verbs.txt  unknown.txt
ensemble_tagger/SWUM/SWUM_POS/data/pos/IRR/: ED-Particles.txt  ED-about_com.txt  ED-all-irr.txt  ED-speak.txt  EN-Particles.txt  EN-all-irr.txt  EN-speak.txt  README  base-s.verbs  owl.txt
ensemble_tagger/SWUM/SWUM_POS/data/pos/particles/: PARTICLES.txt  PhrasalVerbList.txt  README.html  download_particles.sh  getList.pl  getParticles.pl  overlapping_particles.txt  parts.txt  phrasalDictionary.txt  phrasal_verb_dictionary.txt  phrasal_verbs.txt  phrasaldictionaryA.html  phrasaldictionaryB.html  phrasaldictionaryC.html  phrasaldictionaryD.html  phrasaldictionaryE.html  phrasaldictionaryF.html  phrasaldictionaryG.html  phrasaldictionaryH.html  phrasaldictionaryI.html  phrasaldictionaryJ.html  phrasaldictionaryK.html  phrasaldictionaryL.html  phrasaldictionaryM.html  phrasaldictionaryN.html  phrasaldictionaryO.html  phrasaldictionaryP.html  phrasaldictionaryQ.html  phrasaldictionaryR.html  phrasaldictionaryS.html  phrasaldictionaryT.html  phrasaldictionaryU.html  phrasaldictionaryV.html  phrasaldictionaryW.html  phrasaldictionaryX.html  phrasaldictionaryY.html  phrasaldictionaryZ.html  unique_overlapping_particles.txt
ensemble_tagger/SWUM/SWUM_POS/data/pos/tests/: base-verb_non-void.txt  base-verb_non-void_no-get.txt  base-verb_void.txt
ensemble_tagger/SWUM/SWUM_POS/data/swum/: .cvsignore  SWUM_POS_List.txt  ctor-test.txt  eval.txt  eval_fields.txt  ireport-simpleType.out  ireport-simpleType.txt  ireport.txt  jajuk-simpleType.out  jajuk-simpleType.txt  jajuk.txt  modal.diff  random-simpleType.methods  random-simpleType.txt  random.txt  random10Kmethods-noArrays.out  random10Kmethods-noArrays.txt  random10Kmethods-noArrays_noLine.out  random10Kmethods.txt  testing.txt  vdo.txt
ensemble_tagger/SWUM/SWUM_POS/data/swum/tests/: base-verb.txt
ensemble_tagger/SWUM/SWUM_POS/src/edu/udel/nlpa/swum/actions/: BatchHITSHandler.java  BatchSWUMHandler.java  BatchSearchHandler.java  ElementSWUMHandler.java  ElementSearchHandler.java  PluginActivator.java
ensemble_tagger/SWUM/SWUM_POS/src/edu/udel/nlpa/swum/builders/: BaseVerbBuilder.java  ISWUMBuilder.java  RuleListSWUMBuilder.java  UnigramBuilder.java
ensemble_tagger/SWUM/SWUM_POS/src/edu/udel/nlpa/swum/dora/: DoraEdge.java  DoraNode.java  EdgeType.java  NodeType.java  ProgramGraph.java
ensemble_tagger/SWUM/SWUM_POS/src/edu/udel/nlpa/swum/explore/: CallingRelationship.java  LastCallVisitor.java  (+4 more)
ensemble_tagger/ensemble_tagger_implementation/: routes.py
ensemble_tagger/ensemble_tagger_implementation/test_data/: testing_set_CP.csv  testing_set_raw.csv  training_set_CP.csv
ensemble_tagger/srcSAXEventDispatch/srcSAX/: .gitignore  CMakeLists.txt  README
ensemble_tagger/srcSAXEventDispatch/srcSAX/CMake/: CMakeLists.txt
ensemble_tagger/srcSAXEventDispatch/srcSAX/doc/: config
ensemble_tagger/srcSAXEventDispatch/srcSAX/examples/: .gitignore  CMakeLists.txt  example.xml
ensemble_tagger/srcSAXEventDispatch/srcSAX/examples/element_count/: CMakeLists.txt  element_count.cpp  element_count_handler.hpp
ensemble_tagger/srcSAXEventDispatch/srcSAX/examples/identity_copy/: CMakeLists.txt  identity_copy.cpp  identity_copy_handler.hpp
ensemble_tagger/srcSAXEventDispatch/srcSAX/examples/print_callbacks/: CMakeLists.txt  print_callbacks.cpp  print_callbacks_handler.hpp
ensemble_tagger/srcSAXEventDispatch/srcSAX/src/: CMakeLists.txt
ensemble_tagger/srcSAXEventDispatch/srcSAX/src/cpp/: cppCallbackAdapter.hpp  srcSAXController.cpp
ensemble_tagger/srcSAXEventDispatch/srcSAX/src/srcsax/: sax2_srcsax_handler.cpp  srcsax_controller.cpp
ensemble_tagger/srcSAXEventDispatch/srcSAX/src/windows/: windows_utils.cpp  windows_utils.hpp
ensemble_tagger/srcSAXEventDispatch/srcSAX/test/: .gitignore  CMakeLists.txt  Makefile.old  srcsax_handler_test.hpp  test_sax2_srcsax_handler.cpp  test_srcsax.cpp  test_srcsax_handler.cpp
ensemble_tagger/srcSAXEventDispatch/srcSAX/test/cpp/: CMakeLists.txt  test_srcsax_controller.cpp  test_srcsax_handler_cpp.cpp
java_code/: Factorial.java
scripts/: analyze_event_driven.py  identifier_tagger.py
(+124 files in other folders)
